Scalar.Aspire integration

--- a/integrations/aspnetcore/playground/Scalar.AspNetCore.Playground/Properties/launchSettings.json
+++ b/integrations/aspnetcore/playground/Scalar.AspNetCore.Playground/Properties/launchSettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "scalar",
-      "applicationUrl": "http://localhost:5056",
+      "applicationUrl": "https://localhost:5055;http://localhost:5056",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
