--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,8 @@
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "javascript.preferences.importModuleSpecifier": "non-relative",
   "files.associations": {
-    "turbo.json": "jsonc"
+    "turbo.json": "jsonc",
+    "*.css": "tailwindcss"
   },
   "cSpell.enabledFileTypes": {
     "*": true
@@ -81,6 +82,9 @@
     "packages/api-client/tailwind.config.ts": "packages/api-client/**",
     "packages/api-reference/tailwind.config.ts": "packages/api-reference/**",
     "packages/components/tailwind.config.ts": "packages/components/**"
+  },
+  "editor.quickSuggestions": {
+    "strings": "on"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "vitest.commandLine": "pnpm vitest",
