--- a/packages/api-reference/package.json
+++ b/packages/api-reference/package.json
@@ -86,6 +86,7 @@
     "github-slugger": "^2.0.0",
     "microdiff": "^1.4.0",
     "nanoid": "catalog:*",
+    "tailwindcss": "^4.1.6",
     "vue": "catalog:*",
     "zod": "catalog:*"
   },
@@ -93,18 +94,17 @@
     "@scalar/build-tooling": "workspace:*",
     "@scalar/galaxy": "workspace:*",
     "@scalar/react-renderer": "workspace:*",
+    "@tailwindcss/vite": "^4.1.6",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-vue": "catalog:*",
     "@vue/server-renderer": "^3.5.13",
     "@vue/test-utils": "^2.4.1",
     "autoprefixer": "^10.4.19",
-    "postcss": "catalog:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rollup-plugin-webpack-stats": "^0.2.5",
-    "tailwindcss": "catalog:*",
-    "vite": "catalog:*",
+    "vite": "6.3.5",
     "vite-plugin-banner": "^0.7.1",
     "vite-plugin-css-injected-by-js": "^3.4.0",
     "vitest": "catalog:*"
