wip: update components to tailwind v4

--- a/biome.json
+++ b/biome.json
@@ -222,6 +222,15 @@
           }
         }
       }
+    },
+    {
+      "include": ["**/*.css"],
+      "formatter": {
+        "enabled": false
+      },
+      "linter": {
+        "enabled": false
+      }
     }
   ]
 }
