--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,7 @@
   "tailwindCSS.experimental.configFile": {
     "packages/api-client/tailwind.config.ts": "packages/api-client/**",
     "packages/api-reference/tailwind.config.ts": "packages/api-reference/**",
-    "packages/components/tailwind.config.ts": "packages/components/**"
+    "packages/components/src/tailwind.css": "packages/components/**"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "vitest.commandLine": "pnpm vitest",
